--- a/CinePicker/Common/Components/FailedLoadingUIView.xib
+++ b/CinePicker/Common/Components/FailedLoadingUIView.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -53,7 +51,6 @@
             <viewLayoutGuide key="safeArea" id="y7k-h9-OZy"/>
             <connections>
                 <outlet property="actionButton" destination="22G-uv-oul" id="eOJ-15-pKB"/>
-                <outlet property="contentUIView" destination="Bop-2A-nwU" id="szh-0I-2nR"/>
                 <outlet property="messageLabel" destination="v48-SZ-1KO" id="Jfy-h9-BHW"/>
             </connections>
             <point key="canvasLocation" x="0.0" y="-178.56071964017991"/>
