--- a/CinePicker/Common/Components/FailedLoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/FailedLoadingTableViewCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -60,7 +58,6 @@
             <connections>
                 <outlet property="actionButton" destination="R3M-rk-HQK" id="2ah-KQ-efu"/>
                 <outlet property="bottomBarView" destination="jnL-bp-dwb" id="5ua-vX-b7S"/>
-                <outlet property="contentUIView" destination="ewD-5C-LlC" id="bCE-y0-dy3"/>
                 <outlet property="messageLabel" destination="a8b-x4-YOm" id="urd-zj-YpN"/>
             </connections>
             <point key="canvasLocation" x="168.80000000000001" y="90.854572713643179"/>
