--- a/CinePicker/Common/Components/HeaderTableViewCell.xib
+++ b/CinePicker/Common/Components/HeaderTableViewCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -80,7 +78,6 @@
             <viewLayoutGuide key="safeArea" id="mbB-05-Eux"/>
             <connections>
                 <outlet property="bottomBarView" destination="gDd-0w-zxx" id="170-h7-Rle"/>
-                <outlet property="contentUIView" destination="Q22-kA-PTR" id="VoG-zM-aQM"/>
                 <outlet property="headerButton" destination="iUf-o0-zTd" id="2Jp-bE-9OW"/>
                 <outlet property="rightArrowLGButton" destination="V3o-9Y-SZr" id="zTJ-Rc-Upe"/>
             </connections>
