--- a/CinePicker/Common/Components/HeaderWithTagsUIView.xib
+++ b/CinePicker/Common/Components/HeaderWithTagsUIView.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -110,7 +108,6 @@
             <viewLayoutGuide key="safeArea" id="BTI-Bm-W3Y"/>
             <connections>
                 <outlet property="bottomBarView" destination="jxA-wR-KXF" id="fFk-cP-LHH"/>
-                <outlet property="contentUIView" destination="jHL-Jy-dPy" id="dIl-gf-NX4"/>
                 <outlet property="headerLabel" destination="dZt-KC-F9T" id="5MQ-e7-EXd"/>
                 <outlet property="iLikeItLGButton" destination="X6t-c1-F1S" id="TAk-4i-2dy"/>
                 <outlet property="willCheckItOutLGButton" destination="U22-VJ-wzl" id="uuk-LR-TSc"/>
