--- a/CinePicker/Common/Components/LoadingTableViewCell.xib
+++ b/CinePicker/Common/Components/LoadingTableViewCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -49,7 +47,6 @@
             <viewLayoutGuide key="safeArea" id="N97-sz-zdy"/>
             <connections>
                 <outlet property="bottomBarView" destination="haA-LK-a8l" id="5UB-Ri-J99"/>
-                <outlet property="contentUIView" destination="iQg-pe-8aZ" id="q1E-IQ-EUT"/>
                 <outlet property="loadingActivityIndicator" destination="ySI-fI-EzP" id="5Ns-bl-16m"/>
             </connections>
             <point key="canvasLocation" x="-280.80000000000001" y="73.763118440779621"/>
