--- a/CinePicker/Common/Components/MovieCollectionTableViewCell.xib
+++ b/CinePicker/Common/Components/MovieCollectionTableViewCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -15,11 +13,11 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="159.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="375" height="160"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ngY-H8-D1r">
-                        <rect key="frame" x="0.0" y="33.5" width="375" height="124"/>
+                        <rect key="frame" x="0.0" y="33.5" width="375" height="124.5"/>
                         <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="77S-Ig-UGa">
                             <size key="itemSize" width="95" height="120"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -38,7 +36,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ihH-r5-Yca" userLabel="Bottom Bar View">
-                        <rect key="frame" x="0.0" y="159" width="375" height="0.5"/>
+                        <rect key="frame" x="0.0" y="159.5" width="375" height="0.5"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="0.5" id="ckh-Nn-Zxf"/>
                         </constraints>
@@ -59,7 +57,6 @@
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="bottomBarView" destination="ihH-r5-Yca" id="Eeo-jU-Wuj"/>
-                <outlet property="contentUIView" destination="H2p-sc-9uM" id="QeL-M0-wGi"/>
                 <outlet property="headerLabel" destination="3T2-GH-vj6" id="vZX-tk-kNN"/>
                 <outlet property="movieCollectionCollectionView" destination="ngY-H8-D1r" id="Ji1-jS-ekh"/>
             </connections>
