--- a/CinePicker/Common/Components/PersonTableViewCell.xib
+++ b/CinePicker/Common/Components/PersonTableViewCell.xib
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14490.49"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,22 +17,22 @@
                     <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_person_image" translatesAutoresizingMaskIntoConstraints="NO" id="X6g-68-gJp">
-                            <rect key="frame" x="0.0" y="0.0" width="60" height="80"/>
+                            <rect key="frame" x="0.0" y="0.0" width="57" height="80"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="X6g-68-gJp" secondAttribute="height" multiplier="3:4" id="Slg-rq-MSR"/>
+                                <constraint firstAttribute="width" secondItem="X6g-68-gJp" secondAttribute="height" multiplier="57:80" id="9Bg-tL-PYU"/>
                             </constraints>
                         </imageView>
                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="PC3-M1-hgO">
-                            <rect key="frame" x="20" y="30" width="20" height="20"/>
+                            <rect key="frame" x="19" y="30" width="20" height="20"/>
                         </activityIndicatorView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoD-OF-90c">
-                            <rect key="frame" x="76" y="8" width="283" height="21.5"/>
+                            <rect key="frame" x="73" y="8" width="286" height="21.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azh-Ro-oDI">
-                            <rect key="frame" x="76" y="29.5" width="283" height="18"/>
+                            <rect key="frame" x="73" y="29.5" width="286" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
@@ -49,7 +47,7 @@
                     <constraints>
                         <constraint firstAttribute="bottom" secondItem="G0e-4B-kep" secondAttribute="bottom" id="2rF-me-xIp"/>
                         <constraint firstAttribute="bottom" secondItem="X6g-68-gJp" secondAttribute="bottom" id="2zG-Qp-gRy"/>
-                        <constraint firstItem="PC3-M1-hgO" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" constant="20" id="43J-Kj-tMx"/>
+                        <constraint firstItem="PC3-M1-hgO" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" constant="19" id="43J-Kj-tMx"/>
                         <constraint firstAttribute="trailing" secondItem="azh-Ro-oDI" secondAttribute="trailing" constant="16" id="9yX-3I-yYg"/>
                         <constraint firstItem="X6g-68-gJp" firstAttribute="top" secondItem="xmc-nF-0Fs" secondAttribute="top" id="Gox-dm-w8U"/>
                         <constraint firstItem="azh-Ro-oDI" firstAttribute="leading" secondItem="X6g-68-gJp" secondAttribute="trailing" constant="16" id="LAX-Dy-DE6"/>
@@ -76,7 +74,6 @@
             <viewLayoutGuide key="safeArea" id="5yC-yU-bdn"/>
             <connections>
                 <outlet property="bottomBarView" destination="G0e-4B-kep" id="Ckd-UK-8Dh"/>
-                <outlet property="contentUIView" destination="xmc-nF-0Fs" id="0hp-Xf-uhh"/>
                 <outlet property="personImageActivityIndicator" destination="PC3-M1-hgO" id="ahC-m7-Fqt"/>
                 <outlet property="personImageImageView" destination="X6g-68-gJp" id="RLi-CB-A6h"/>
                 <outlet property="personNameLabel" destination="qoD-OF-90c" id="TsX-o6-fuf"/>
