--- a/CinePicker/Common/Components/PersonTableViewCell.xib
+++ b/CinePicker/Common/Components/PersonTableViewCell.xib
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14868" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="15705" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14824"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15706"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -10,53 +10,44 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="taw-4Y-TWF" customClass="PersonTableViewCell" customModule="CinePicker" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="88"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xmc-nF-0Fs" userLabel="Content View">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="80"/>
+                    <rect key="frame" x="0.0" y="4" width="375" height="80"/>
                     <subviews>
                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="default_person_image" translatesAutoresizingMaskIntoConstraints="NO" id="X6g-68-gJp">
-                            <rect key="frame" x="0.0" y="0.0" width="57" height="80"/>
+                            <rect key="frame" x="16" y="0.0" width="57" height="80"/>
                             <constraints>
                                 <constraint firstAttribute="width" secondItem="X6g-68-gJp" secondAttribute="height" multiplier="57:80" id="9Bg-tL-PYU"/>
                             </constraints>
                         </imageView>
                         <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="PC3-M1-hgO">
-                            <rect key="frame" x="19" y="30" width="20" height="20"/>
+                            <rect key="frame" x="35" y="30" width="20" height="20"/>
                         </activityIndicatorView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qoD-OF-90c">
-                            <rect key="frame" x="73" y="8" width="286" height="21.5"/>
+                            <rect key="frame" x="89" y="8" width="270" height="21.5"/>
                             <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Position" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="azh-Ro-oDI">
-                            <rect key="frame" x="73" y="29.5" width="286" height="18"/>
+                            <rect key="frame" x="89" y="29.5" width="270" height="18"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <nil key="textColor"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G0e-4B-kep" userLabel="Bottom Bar View">
-                            <rect key="frame" x="0.0" y="79.5" width="375" height="0.5"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="0.5" id="gX1-GV-0in"/>
-                            </constraints>
-                        </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="G0e-4B-kep" secondAttribute="bottom" id="2rF-me-xIp"/>
                         <constraint firstAttribute="bottom" secondItem="X6g-68-gJp" secondAttribute="bottom" id="2zG-Qp-gRy"/>
-                        <constraint firstItem="PC3-M1-hgO" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" constant="19" id="43J-Kj-tMx"/>
+                        <constraint firstItem="PC3-M1-hgO" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" constant="35" id="43J-Kj-tMx"/>
                         <constraint firstAttribute="trailing" secondItem="azh-Ro-oDI" secondAttribute="trailing" constant="16" id="9yX-3I-yYg"/>
                         <constraint firstItem="X6g-68-gJp" firstAttribute="top" secondItem="xmc-nF-0Fs" secondAttribute="top" id="Gox-dm-w8U"/>
                         <constraint firstItem="azh-Ro-oDI" firstAttribute="leading" secondItem="X6g-68-gJp" secondAttribute="trailing" constant="16" id="LAX-Dy-DE6"/>
-                        <constraint firstItem="X6g-68-gJp" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" id="Q89-0E-Syq"/>
+                        <constraint firstItem="X6g-68-gJp" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" constant="16" id="Q89-0E-Syq"/>
                         <constraint firstItem="qoD-OF-90c" firstAttribute="leading" secondItem="X6g-68-gJp" secondAttribute="trailing" constant="16" id="boT-2Y-Jho"/>
                         <constraint firstItem="qoD-OF-90c" firstAttribute="top" secondItem="xmc-nF-0Fs" secondAttribute="top" constant="8" id="dxF-5e-Fg3"/>
                         <constraint firstAttribute="trailing" secondItem="qoD-OF-90c" secondAttribute="trailing" constant="16" id="fWk-KK-yOm"/>
-                        <constraint firstAttribute="trailing" secondItem="G0e-4B-kep" secondAttribute="trailing" id="mfs-pl-XhQ"/>
-                        <constraint firstItem="G0e-4B-kep" firstAttribute="leading" secondItem="xmc-nF-0Fs" secondAttribute="leading" id="rdw-K0-eLl"/>
                         <constraint firstItem="azh-Ro-oDI" firstAttribute="top" secondItem="qoD-OF-90c" secondAttribute="bottom" id="ydq-mh-H8n"/>
                         <constraint firstItem="PC3-M1-hgO" firstAttribute="centerY" secondItem="xmc-nF-0Fs" secondAttribute="centerY" id="zNu-2C-JNR"/>
                     </constraints>
@@ -65,15 +56,14 @@
             <constraints>
                 <constraint firstItem="xmc-nF-0Fs" firstAttribute="leading" secondItem="5yC-yU-bdn" secondAttribute="leading" id="2l4-Mj-hf1"/>
                 <constraint firstItem="5yC-yU-bdn" firstAttribute="trailing" secondItem="xmc-nF-0Fs" secondAttribute="trailing" id="50t-Su-WDj"/>
-                <constraint firstItem="xmc-nF-0Fs" firstAttribute="top" secondItem="taw-4Y-TWF" secondAttribute="top" id="Vs5-wI-tXN"/>
-                <constraint firstAttribute="bottom" secondItem="xmc-nF-0Fs" secondAttribute="bottom" id="eUY-BR-AP0"/>
+                <constraint firstItem="xmc-nF-0Fs" firstAttribute="top" secondItem="taw-4Y-TWF" secondAttribute="top" constant="4" id="Vs5-wI-tXN"/>
+                <constraint firstAttribute="bottom" secondItem="xmc-nF-0Fs" secondAttribute="bottom" constant="4" id="eUY-BR-AP0"/>
             </constraints>
             <nil key="simulatedTopBarMetrics"/>
             <nil key="simulatedBottomBarMetrics"/>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <viewLayoutGuide key="safeArea" id="5yC-yU-bdn"/>
             <connections>
-                <outlet property="bottomBarView" destination="G0e-4B-kep" id="Ckd-UK-8Dh"/>
                 <outlet property="personImageActivityIndicator" destination="PC3-M1-hgO" id="ahC-m7-Fqt"/>
                 <outlet property="personImageImageView" destination="X6g-68-gJp" id="RLi-CB-A6h"/>
                 <outlet property="personNameLabel" destination="qoD-OF-90c" id="TsX-o6-fuf"/>
